add anchor tags as an example

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>A Dog's Life</h1>
+  <h1><a name="#top"></a>A Dog's Life</h1>
+  <h2>Table of Contents</h2>
+  <ul>
+    <li><a href="#top">Top</a></li>
+    <li><a href="#favAct">Favorite Activities</a></li>
+  </ul>
   <p>A blog about 2 dogs; Luna and Bigfoot</p>
   
-  <h3>Favorite Activities:</h3>
+  <h3><a name="#favAct"></a>Favorite Activities:</h3>
     <ul>
       <li>Eat</li>
       <li>Sleep</li>
@@ -21,6 +26,8 @@
       <li>Nyla Bone</li>
       <li>Tennis Ball</li>
     </ul>
+
+  <p><a href="#top">Top of page</a></p>
     
 </body>
 </html>
