add clickable buttons for dark light and a special theme
Co-Authored-by: Spencer Moody <spencer.moody@outlook.com>

--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script src="js/jquery-3.5.1.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Document</title>
 </head>
 <body>
-  <h1><a name="#top"></a>A Dog's Life</h1>
-  <h2>Table of Contents</h2>
-  <ul>
-    <li><a href="#top">Top</a></li>
-    <li><a href="#favAct">Favorite Activities</a></li>
-  </ul>
-  <p>A blog about 2 dogs; Luna and Bigfoot</p>
-  
-  <h3><a name="#favAct"></a>Favorite Activities:</h3>
+  <div class ="container">
+    <h1>Please pick a background:</h1>
+    <button class ="btn btn-info" id="dark">Dark</button>
+    <button class ="btn btn-danger" id="light">Light</button>
+    <button class ="btn btn-warning" id="surprise">Surprise</button>
+    <h1><a name="#top"></a>A Dog's Life</h1>
+    <h2>Table of Contents</h2>
     <ul>
-      <li>Eat</li>
-      <li>Sleep</li>
-      <li>Watching others eat</li>
-      <li>Barking at the doorbell</li>
+      <li><a href="#top">Top</a></li>
+      <li><a href="#favAct">Favorite Activities</a></li>
     </ul>
-    <br />
-  <h3>Favorite Toys:</h3>
-    <ul>
-      <li>Kong Chew Toy</li>
-      <li>Nyla Bone</li>
-      <li>Tennis Ball</li>
-    </ul>
+    <p>A blog about 2 dogs; Luna and Bigfoot</p>
+    
+    <h3><a name="#favAct"></a>Favorite Activities:</h3>
+      <ul>
+        <li>Eat</li>
+        <li>Sleep</li>
+        <li>Watching others eat</li>
+        <li>Barking at the doorbell</li>
+      </ul>
+      <br />
+    <h3>Favorite Toys:</h3>
+      <ul>
+        <li>Kong Chew Toy</li>
+        <li>Nyla Bone</li>
+        <li>Tennis Ball</li>
+      </ul>
 
-  <p><a href="#top">Top of page</a></p>
+    <p><a href="#top">Top of page</a></p>
+  </div>
     
 </body>
 </html>
